Graphs running well now